# paletti

./: .gitignore  LICENSE  README.md  batch.nu  importtime.txt  pyproject.toml
src/paletti/: __init__.py  cli.py  color.py  core.py  dither.py  imageio.py  palette.py  svg.py
tests/: test_paletti.py
